--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["6285806240904@s.whatsapp.net","6285806240904@s.whatsapp.net"],
-    "ownerName": "•𝙍𝙖𝙢𝙖𝙖` 𝙆𝙚𝙩𝙘𝙚𝙝",
+    "ownerNumber": ["6282183386471@s.whatsapp.net","6282183386471@s.whatsapp.net"],
+    "ownerName": "Luthfi",
     "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Loly'Botz",
-    "footer": "Rama - Loly'Botz",
+    "botName": "Luthfi' Botz",
+    "footer": "Luthfi Botz",
     "sessionName": "session",
     "pathimg": "./media/haruka.jpg",
     "BotKey": "V12",
